--- a/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement.csproj
@@ -15,6 +15,9 @@
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Utilities\" />
+    <Folder Include="Views\DoctorViews\" />
+    <Folder Include="Views\InventoryViews\" />
+    <Folder Include="Views\StaffViews\" />
   </ItemGroup>
 
   <ItemGroup>
