--- a/HospitalManagement/HospitalManagement.csproj
+++ b/HospitalManagement/HospitalManagement.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove="assets\login-logo.png" />
     <None Remove="assets\logo.png" />
+    <None Remove="assets\profile-photo.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="assets\logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="assets\profile-photo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
